k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media-storage
  labels:
    name: media-storage
